--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
+  "engines": {
+    "node": "14.15.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
